Update to latest gradle, remove shadow jar, updated copyright, general tidy-up