@@ -1,5 +1,5 @@
 /*
- * Copyright 2019-2022 Shaun Laurens.
+ * Copyright 2019-2023 Shaun Laurens.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import io.aeron.driver.MediaDriver;
 import io.aeron.driver.ThreadingMode;
 import io.aeron.samples.cluster.ClusterConfig;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ClusterClient
@@ -30,21 +29,20 @@ public class ClusterClient
 
     public static void main(final String[] args)
     {
-        final String ingressEndpoints = ingressEndpoints(Arrays.asList("localhost"));
-        RfqClusterClient rfqClusterClient = new RfqClusterClient();
+        final String ingressEndpoints = ingressEndpoints(List.of("localhost"));
+        final RfqClusterClient rfqClusterClient = new RfqClusterClient();
 
-        try (
-                MediaDriver mediaDriver = MediaDriver.launchEmbedded(new MediaDriver.Context()
-                        .threadingMode(ThreadingMode.SHARED)
-                        .dirDeleteOnStart(true)
-                        .dirDeleteOnShutdown(true));
-                AeronCluster aeronCluster = AeronCluster.connect(
-                        new AeronCluster.Context()
-                                .egressListener(rfqClusterClient)
-                                .egressChannel("aeron:udp?endpoint=localhost:0")
-                                .aeronDirectoryName(mediaDriver.aeronDirectoryName())
-                                .ingressChannel("aeron:udp")
-                                .ingressEndpoints(ingressEndpoints)))
+        try (MediaDriver mediaDriver = MediaDriver.launchEmbedded(new MediaDriver.Context()
+            .threadingMode(ThreadingMode.SHARED)
+            .dirDeleteOnStart(true)
+            .dirDeleteOnShutdown(true));
+            AeronCluster aeronCluster = AeronCluster.connect(
+                new AeronCluster.Context()
+                .egressListener(rfqClusterClient)
+                .egressChannel("aeron:udp?endpoint=localhost:0")
+                .aeronDirectoryName(mediaDriver.aeronDirectoryName())
+                .ingressChannel("aeron:udp")
+                .ingressEndpoints(ingressEndpoints)))
         {
             rfqClusterClient.setAeronCluster(aeronCluster);
             rfqClusterClient.start();
